src/main/java/org/example/generatedParser/LisaParser.java
// Generated from Lisa.g4 by ANTLR 4.13.2
package org.example.generatedParser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class LisaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VARIABLE=1, EST=2, AFFICHE=3, SI=4, SINON=5, TANT_QUE=6, FONCTION=7, RETOURNE=8, 
		DEBUT=9, FIN=10, ET=11, EGALE=12, PLUS_PETIT_QUE=13, PLUS_GRAND_QUE=14, 
		PLUS=15, MOINS=16, FOIS=17, DIVISE=18, PAREN_OUVRANTE=19, PAREN_FERMANTE=20, 
		POINT_VIRGULE=21, NOMBRE=22, IDENTIFIANT=23, WS=24, COMMENTAIRE=25;
	public static final int
		RULE_programme = 0, RULE_instruction = 1, RULE_bloc = 2, RULE_declaration = 3, 
		RULE_affectation = 4, RULE_affichage = 5, RULE_conditionnel = 6, RULE_boucle = 7, 
		RULE_fonction_declaration = 8, RULE_parametres = 9, RULE_arguments = 10, 
		RULE_appel_fonction = 11, RULE_retour = 12, RULE_condition = 13, RULE_comparateur = 14, 
		RULE_expression = 15, RULE_operateur = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"programme", "instruction", "bloc", "declaration", "affectation", "affichage", 
			"conditionnel", "boucle", "fonction_declaration", "parametres", "arguments", 
			"appel_fonction", "retour", "condition", "comparateur", "expression", 
			"operateur"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'variable'", "'est'", "'affiche'", "'si'", "'sinon'", "'tant_que'", 
			"'fonction'", "'retourne'", "'debut'", "'fin'", "'et'", "'egale'", "'plus_petit_que'", 
			"'plus_grand_que'", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VARIABLE", "EST", "AFFICHE", "SI", "SINON", "TANT_QUE", "FONCTION", 
			"RETOURNE", "DEBUT", "FIN", "ET", "EGALE", "PLUS_PETIT_QUE", "PLUS_GRAND_QUE", 
			"PLUS", "MOINS", "FOIS", "DIVISE", "PAREN_OUVRANTE", "PAREN_FERMANTE", 
			"POINT_VIRGULE", "NOMBRE", "IDENTIFIANT", "WS", "COMMENTAIRE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lisa.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LisaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgrammeContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LisaParser.EOF, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public ProgrammeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).enterProgramme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).exitProgramme(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LisaVisitor ) return ((LisaVisitor<? extends T>)visitor).visitProgramme(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgrammeContext programme() throws RecognitionException {
		ProgrammeContext _localctx = new ProgrammeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programme);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8389594L) != 0)) {
				{
				{
				setState(34);
				instruction();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(40);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AffectationContext affectation() {
			return getRuleContext(AffectationContext.class,0);
		}
		public AffichageContext affichage() {
			return getRuleContext(AffichageContext.class,0);
		}
		public ConditionnelContext conditionnel() {
			return getRuleContext(ConditionnelContext.class,0);
		}
		public BoucleContext boucle() {
			return getRuleContext(BoucleContext.class,0);
		}
		public Fonction_declarationContext fonction_declaration() {
			return getRuleContext(Fonction_declarationContext.class,0);
		}
		public RetourContext retour() {
			return getRuleContext(RetourContext.class,0);
		}
		public Appel_fonctionContext appel_fonction() {
			return getRuleContext(Appel_fonctionContext.class,0);
		}
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LisaVisitor ) return ((LisaVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruction);
		try {
			setState(51);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				affectation();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				affichage();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(45);
				conditionnel();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(46);
				boucle();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(47);
				fonction_declaration();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(48);
				retour();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(49);
				appel_fonction();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(50);
				bloc();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocContext extends ParserRuleContext {
		public TerminalNode DEBUT() { return getToken(LisaParser.DEBUT, 0); }
		public TerminalNode FIN() { return getToken(LisaParser.FIN, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public BlocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).enterBloc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).exitBloc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LisaVisitor ) return ((LisaVisitor<? extends T>)visitor).visitBloc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocContext bloc() throws RecognitionException {
		BlocContext _localctx = new BlocContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bloc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(DEBUT);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8389594L) != 0)) {
				{
				{
				setState(54);
				instruction();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(LisaParser.VARIABLE, 0); }
		public TerminalNode IDENTIFIANT() { return getToken(LisaParser.IDENTIFIANT, 0); }
		public TerminalNode EST() { return getToken(LisaParser.EST, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode POINT_VIRGULE() { return getToken(LisaParser.POINT_VIRGULE, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LisaVisitor ) return ((LisaVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(VARIABLE);
			setState(63);
			match(IDENTIFIANT);
			setState(64);
			match(EST);
			setState(65);
			expression(0);
			setState(66);
			match(POINT_VIRGULE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AffectationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIANT() { return getToken(LisaParser.IDENTIFIANT, 0); }
		public TerminalNode EST() { return getToken(LisaParser.EST, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode POINT_VIRGULE() { return getToken(LisaParser.POINT_VIRGULE, 0); }
		public AffectationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affectation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).enterAffectation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).exitAffectation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LisaVisitor ) return ((LisaVisitor<? extends T>)visitor).visitAffectation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AffectationContext affectation() throws RecognitionException {
		AffectationContext _localctx = new AffectationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_affectation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(IDENTIFIANT);
			setState(69);
			match(EST);
			setState(70);
			expression(0);
			setState(71);
			match(POINT_VIRGULE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AffichageContext extends ParserRuleContext {
		public TerminalNode AFFICHE() { return getToken(LisaParser.AFFICHE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode POINT_VIRGULE() { return getToken(LisaParser.POINT_VIRGULE, 0); }
		public AffichageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affichage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).enterAffichage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).exitAffichage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LisaVisitor ) return ((LisaVisitor<? extends T>)visitor).visitAffichage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AffichageContext affichage() throws RecognitionException {
		AffichageContext _localctx = new AffichageContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_affichage);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(AFFICHE);
			setState(74);
			expression(0);
			setState(75);
			match(POINT_VIRGULE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionnelContext extends ParserRuleContext {
		public TerminalNode SI() { return getToken(LisaParser.SI, 0); }
		public TerminalNode PAREN_OUVRANTE() { return getToken(LisaParser.PAREN_OUVRANTE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode PAREN_FERMANTE() { return getToken(LisaParser.PAREN_FERMANTE, 0); }
		public List<BlocContext> bloc() {
			return getRuleContexts(BlocContext.class);
		}
		public BlocContext bloc(int i) {
			return getRuleContext(BlocContext.class,i);
		}
		public TerminalNode SINON() { return getToken(LisaParser.SINON, 0); }
		public ConditionnelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionnel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).enterConditionnel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).exitConditionnel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LisaVisitor ) return ((LisaVisitor<? extends T>)visitor).visitConditionnel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionnelContext conditionnel() throws RecognitionException {
		ConditionnelContext _localctx = new ConditionnelContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_conditionnel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(SI);
			setState(78);
			match(PAREN_OUVRANTE);
			setState(79);
			condition();
			setState(80);
			match(PAREN_FERMANTE);
			setState(81);
			bloc();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SINON) {
				{
				setState(82);
				match(SINON);
				setState(83);
				bloc();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoucleContext extends ParserRuleContext {
		public TerminalNode TANT_QUE() { return getToken(LisaParser.TANT_QUE, 0); }
		public TerminalNode PAREN_OUVRANTE() { return getToken(LisaParser.PAREN_OUVRANTE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode PAREN_FERMANTE() { return getToken(LisaParser.PAREN_FERMANTE, 0); }
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public BoucleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boucle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).enterBoucle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).exitBoucle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LisaVisitor ) return ((LisaVisitor<? extends T>)visitor).visitBoucle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoucleContext boucle() throws RecognitionException {
		BoucleContext _localctx = new BoucleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_boucle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(TANT_QUE);
			setState(87);
			match(PAREN_OUVRANTE);
			setState(88);
			condition();
			setState(89);
			match(PAREN_FERMANTE);
			setState(90);
			bloc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Fonction_declarationContext extends ParserRuleContext {
		public TerminalNode FONCTION() { return getToken(LisaParser.FONCTION, 0); }
		public TerminalNode IDENTIFIANT() { return getToken(LisaParser.IDENTIFIANT, 0); }
		public TerminalNode PAREN_OUVRANTE() { return getToken(LisaParser.PAREN_OUVRANTE, 0); }
		public TerminalNode PAREN_FERMANTE() { return getToken(LisaParser.PAREN_FERMANTE, 0); }
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public ParametresContext parametres() {
			return getRuleContext(ParametresContext.class,0);
		}
		public Fonction_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fonction_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).enterFonction_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).exitFonction_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LisaVisitor ) return ((LisaVisitor<? extends T>)visitor).visitFonction_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fonction_declarationContext fonction_declaration() throws RecognitionException {
		Fonction_declarationContext _localctx = new Fonction_declarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fonction_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(FONCTION);
			setState(93);
			match(IDENTIFIANT);
			setState(94);
			match(PAREN_OUVRANTE);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIANT) {
				{
				setState(95);
				parametres();
				}
			}

			setState(98);
			match(PAREN_FERMANTE);
			setState(99);
			bloc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametresContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIANT() { return getTokens(LisaParser.IDENTIFIANT); }
		public TerminalNode IDENTIFIANT(int i) {
			return getToken(LisaParser.IDENTIFIANT, i);
		}
		public List<TerminalNode> ET() { return getTokens(LisaParser.ET); }
		public TerminalNode ET(int i) {
			return getToken(LisaParser.ET, i);
		}
		public ParametresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametres; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).enterParametres(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).exitParametres(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LisaVisitor ) return ((LisaVisitor<? extends T>)visitor).visitParametres(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametresContext parametres() throws RecognitionException {
		ParametresContext _localctx = new ParametresContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parametres);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(IDENTIFIANT);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ET) {
				{
				{
				setState(102);
				match(ET);
				setState(103);
				match(IDENTIFIANT);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentsContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> ET() { return getTokens(LisaParser.ET); }
		public TerminalNode ET(int i) {
			return getToken(LisaParser.ET, i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).exitArguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LisaVisitor ) return ((LisaVisitor<? extends T>)visitor).visitArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_arguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			expression(0);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ET) {
				{
				{
				setState(110);
				match(ET);
				setState(111);
				expression(0);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Appel_fonctionContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIANT() { return getTokens(LisaParser.IDENTIFIANT); }
		public TerminalNode IDENTIFIANT(int i) {
			return getToken(LisaParser.IDENTIFIANT, i);
		}
		public TerminalNode EST() { return getToken(LisaParser.EST, 0); }
		public TerminalNode PAREN_OUVRANTE() { return getToken(LisaParser.PAREN_OUVRANTE, 0); }
		public TerminalNode PAREN_FERMANTE() { return getToken(LisaParser.PAREN_FERMANTE, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode POINT_VIRGULE() { return getToken(LisaParser.POINT_VIRGULE, 0); }
		public Appel_fonctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_appel_fonction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).enterAppel_fonction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LisaListener ) ((LisaListener)listener).exitAppel_fonction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LisaVisitor ) return ((LisaVisitor<? extends T>)visitor).visitAppel_fonction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Appel_fonctionContext appel_fonction() throws RecognitionException {
		Appel_fonctionContext _localctx = new Appel_fonctionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_appel_fonction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(IDENTIFIANT);
			setState(118);
			match(EST);
			setState(119);
			match(IDENTIFIANT);
			setState(120);
			match(PAREN_OUVRANTE);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 13107200L) != 0)) {
				{
				setState(121);
				arguments();
				}
			}

			setState(124);
			match(PAREN_FERMANTE);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POINT_VIRGULE) {
				{
				setState(125);
				match(POINT_VIRGULE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
